# linux-oneplus-billie

./: .gitignore  BUILD.bazel  Makefile  build.config.aarch64  build.config.billie  build.config.billie.common  build.config.billie.common.clang  build.config.common  build.config.constants  build_billie.sh
arch/arm64/: Makefile
arch/arm64/kernel/vdso32/: Makefile
drivers/: Kconfig  Makefile
drivers/android/: binder.c
drivers/char/: adsprpc.c
drivers/gpu/msm/: kgsl_iommu.c
drivers/i2c/busses/: i2c-qcom-geni.c
drivers/input/misc/: qpnp-power-on.c
drivers/misc/: qseecom.c
drivers/oneplus/coretech/houston/: houston.c
drivers/oneplus/coretech/tpd/: tpd.c
drivers/pci/controller/: pci-msm-msi.c
drivers/rpmsg/: qcom_glink_native.c
drivers/scsi/ufs/: ufs.h  ufshcd.c
drivers/tty/serial/: msm_geni_serial.c
drivers/usb/host/: xhci-ring.c  xhci.c
fs/: exec.c  open.c
fs/f2fs/: data.c  f2fs.h  file.c  gc.c  node.c  segment.c
include/linux/: blkdev.h  sched.h
include/net/: inet_connection_sock.h  sock.h
include/oneplus/uxcore/: opchain_helper.h
kernel/: exit.c  fork.c
kernel/cgroup/: cgroup.c
kernel/events/: core.c
kernel/sched/: fair.c
mm/: memcontrol.c  page-writeback.c
net/: Kconfig  Makefile
net/core/: dev.c  sock.c
net/ipv4/: af_inet.c  inet_connection_sock.c  tcp.c  tcp_input.c  tcp_ipv4.c  tcp_output.c  tcp_timer.c
net/ipv6/: addrconf.c  syncookies.c
scripts/: Makefile.lib
techpack/: Kconfig
techpack/audio/asoc/: msm-pcm-routing-v2.c
techpack/audio/dsp/: q6adm.c  q6voice.c
techpack/oneplus/: Kconfig
(+7 files in other folders)
